syntax = "proto3";

package mock;

option go_package = "github.com/lightsparkdev/spark/proto/mock";
import "google/protobuf/empty.proto";

service MockService {
    rpc clean_up_preimage_share(CleanUpPreimageShareRequest) returns (google.protobuf.Empty) {}
    rpc interrupt_transfer(InterruptTransferRequest) returns (google.protobuf.Empty) {}
    rpc update_nodes_status(UpdateNodesStatusRequest) returns (google.protobuf.Empty) {}
}

message CleanUpPreimageShareRequest {
    bytes payment_hash = 1;
}

message InterruptTransferRequest {
    enum InterruptTransferAction {
        NONE = 0;
        INTERRUPT = 1;
        RESUME = 2;
    }
    InterruptTransferAction action = 1;
}

message UpdateNodesStatusRequest {
    repeated string node_ids = 1;
    string status = 2;
}